--- a/_css/rcl.css
+++ b/_css/rcl.css
@@ -64,13 +64,23 @@ body {
 		-o-border-radius: 2px;
 		box-shadow: 0px 0px 2px #555;
 	}
+	.mc-field-checkbox {
+		position: relative;
+	}
 	.mc-checkbox {
+		position: relative;
+		top: -5px;
+		left: -2px;
 		float: left;
 		width: 20px;
 		height: 20px;
+		margin-right: 3px !important;
+		margin-bottom: 10px;
 	}
 	.mc-checkbox-desc {
-		margin-bottom: 10px;
+		float: left;
+		width: 90%;
+		margin-bottom: 15px;
 		color: #fff;
 		font-size: 15px;
 		line-height: 15px;
@@ -96,6 +106,15 @@ body {
 			background: #940211;
 			transition: 
 		}
+		
+	.optin-consent {
+		margin-top: 10px;
+		color: #ebebca;
+		line-height: 12px;
+		font-size: 12px;
+	}
+	
+	
 
 /* CONTENT
 ------------------------------- */
